<resources>
    <string name="app_name" translatable="false">ShareDoubt</string>

    <!-- login and register names-->
    <string name="et_password">Contraseña</string>
    <string name="et_userName">Usuario|Correo</string>
    <string name="et_userNameR">Usuario</string>
    <string name="btn_signin">Iniciar Sesión</string>
    <string name="et_email">Correo</string>
    <string name="btn_signout">Cerrar Sesión</string>
    <string name="tv_register">Registrarse</string>
    <string name="tv_forget">¿Has olvidado tu contraseña?</string>
    <string name="btn_createAccount">Crear Cuenta</string>
    <string name="register_name">Registrar</string>
    <string name="home_name">Inicio</string>
    <string name="cancel">Cancelar</string>
    <string name="send">Enviar</string>

    <!-- login and register errors advices-->
    <string name="err_login">Usuario|correo y/o contraseña incorrectos</string>
    <string name="err_email_exist">Correo ya registrado</string>
    <string name="err_userName_len">Debe contener al menos 4 caracteres</string>
    <string name="err_email_format">Correo incorrecto</string>
    <string name="err_pass_len">Debe contener al menos 6 caracteres</string>
    <string name="err_course">Selecciona curso</string>
    <string name="err_user_exist">Nombre usuario existente</string>
    <string name="err_user_not_exist">Nombre usuario inexistente</string>
    <string name="err_notSend_email">No se ha enviado ningún correo electrónico</string>
    <string name="restartP">Te hemos enviado las instrucciones para restablecer la contraseña</string>
    <string name="err_send_email">Error al enviar correo</string>
    <string name="err_post">Este usuario ya no se encuentra en la base de datos"</string>
    <string name="email_not_registred">Correo no registrado en la base de datos</string>
    <string name="email_registred">Introduce tu correo electrónico registrado</string>
    <string name="err_email_empty">Introduce el usuario o correo</string>
    <string name="err_pass_empty">Introduce la contraseña</string>

    <string name="permiss">Debes aceptar los permisos para hacer uso de esta función</string>
    <string name="open_camera">Hacer foto</string>
    <string name="select_gallery">Seleccionar de galería</string>
    <string name="add_image">Añadir imagen</string>


    <!-- doubts -->
    <string name="title_new_doubt">CREAR NUEVA DUDA</string>
    <string name="title">Título</string>
    <string name="description">Descripción</string>
    <string name="subject">Asignatura</string>
    <string name="optional">Opcional (máx 8):</string>
    <string name="last_doubts">ÚLTIMAS DUDAS</string>


    <!-- doubts errors advices-->
    <string name="err_len_et">Deberías detallar más</string>
    <string name="err_title_empty">Introduce título</string>
    <string name="err_description_empty">Introduce descripción</string>
    <string name="err_subject_empty">Introduce asignatura</string>
    <string name="err_subject">Asignatura incorrecta</string>
    <string name="err_empty_subject">Esta asignatura no dispone de ninguna duda</string>
    <string name="alert_remove_image">¿Realmente quieres eliminar esta imagen?</string>
    <string name="yes">Sí</string>
    <string name="not" translatable="false">No</string>
    <string name="course">CURSOS</string>
    <string name="alert_remove_subject">¿Realmente quieres eliminar esta asignatura?</string>
    <string name="exit_with_selected_subjects">No has guardado las asignaturas seleccionadas. ¿Estás seguro que quieres salir?</string>
    <string name="select_any_subject">Selecciona alguna asignatura</string>
    <string name="subjects_of">ASIGNATURAS DE</string>
    <string name="first_semester" translatable="false">1r semestre</string>
    <string name="second_semester" translatable="false">2o semestre</string>
    <string name="string_images_doubts">Archivos adjuntos de la duda:</string>
    <string name="responses">Respuestas:</string>
    <string name="string_write_response">Escribe tu respuesta</string>
    <string name="empty_subjects">No dispones de ninguna asignatura. ¡Añade todas las que quieras!</string>


    <string name="my_perfil">MI PERFIL</string>
    <string name="tv_my_doubts">TUS DUDAS:</string>
    <string name="alert_exit">¿Estás seguro que quieres salir?</string>

    <string name="title_new_adv_answer">Respuesta avanzada</string>
    <string name="response">Respuesta:</string>
    <string name="slow_connection">Comprueba tu conexión a internet. En cuanto esté disponible, iniciaremos la aplicación</string>
    <string name="add_image_answer">Añade alguna imagen a tu respuesta (máx 8):</string>
    <string name="err_conex">Comprueba tu conexión a internet y vuelve a intentarlo</string>
    <string name="title_response">RESPUESTA</string>
    <string name="empty_answer">Introduce la respuesta</string>
    <string name="err_max_images">Selecciona un máximo de 8 imagenes</string>
    <string name="limit_max_images">Has llegado al límite de imágenes por duda</string>
    <string name="exit_with_adv_answer">No has subido tu respuesta. ¿Realmente quieres salir?</string>
    <string name="my_subjets">MIS ASIGNATURAS</string>


</resources>
