<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:onClick="hideKeyboard"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:id="@+id/ll_camera_r"
        android:layout_marginBottom="16dp"
        android:onClick="openImage"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/img_user"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="0dp"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/user_img"
            app:civ_border_width="0dp"/>

        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-20dp"
            android:paddingLeft="16dp"
            android:src="@mipmap/ic_camera" />
    </LinearLayout>

        <EditText
            android:id="@+id/et_userName"
            style="@style/editText_style"
            android:hint="@string/et_userNameR"
            android:inputType="text" />


        <EditText
            android:id="@+id/et_emailR"
            style="@style/editText_style"
            android:hint="@string/et_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_passwordR"
            style="@style/editText_style"
            android:drawableRight="@drawable/eye"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:paddingRight="8dip" />

        <ProgressBar
            android:id="@+id/progressBarR"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp" />

        <Button
            android:id="@+id/btn_registerR"
            style="@style/button_style"
            android:layout_marginBottom="30dp"
            android:onClick="createAccount"
            android:text="@string/btn_createAccount" />

    </LinearLayout>

</ScrollView>
