<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="16dp"
    tools:context=".View.DoubtDetailActivity"
    android:background="@color/backGround">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:titleTextColor="@color/colorName"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_collapseMode="pin"
        android:textStyle="bold"
        app:layout_scrollFlags="scroll|enterAlways"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:id="@+id/view_line"
        android:layout_below="@+id/my_toolbar"
        android:background="@color/colorLine" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_line"
        android:layout_above="@id/answer_form">

        <LinearLayout
            android:id="@+id/post_author_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_toolbar"
            android:orientation="vertical">

            <include
                layout="@layout/item_doubt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_attachedFiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/string_images_doubts"
                android:textColor="@color/colorName" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycle_items_doubt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_attachedFiles"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="16dp"
                android:scrollbars="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/items_carousel" />

            <TextView
                android:id="@+id/answers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/post_author_layout"
                android:layout_marginTop="5dp"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:text="@string/responses"
                android:textColor="@color/colorName" />
            <!--<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="¡Sé el primero en ayudar!"
                android:layout_marginTop="5dp"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:layout_below="@id/post_author_layout"
                android:id="@+id/not_answers"
                android:textColor="@color/colorName"/>
            <ProgressBar
                android:id="@+id/progressBar_a"
                android:visibility="visible"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"/>-->

            <LinearLayout
                android:id="@+id/layout_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/post_author_layout">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_answers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    tools:listitem="@layout/item_answer" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_below="@id/answer_form"
        android:id="@+id/answer_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:theme="@style/MyEditText"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >

        <Button
            android:id="@+id/button_advance_answer"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="39dp"
            android:layout_height="35dp"
            android:background="@mipmap/ic_select_images_doubt" />

        <EditText
            android:id="@+id/field_answer_text"
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fadeScrollbars="false"
            android:hint="@string/string_write_response"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:minLines="1"
            android:scrollbars="vertical" />

        <ImageView
            android:id="@+id/iv_post_answer"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="39dp"
            android:layout_height="35dp"
            android:layout_marginTop="4dp"
            android:background="@mipmap/ic_send_answer" />
    </LinearLayout>

</RelativeLayout>